z-index fix

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,16 +1,45 @@
 .header {
-  position: relative;
+  position: sticky;
+  top: 0;
   display: flex;
   justify-content: space-between;
   width: 100%;
   border-top: 8px solid #d4613e;
   padding-bottom: 50px;
+  background-color: #fff;
+  z-index: 1;
 }
 
 .logo {
+  position: sticky;
+  top: 0;
   width: 230px;
   height: 105px;
   margin: 90px auto 0 40px;
+  animation: swing 1s ease;
+  animation-iteration-count: 1;
+}
+
+// アニメーション
+@keyframes swing {
+  15% {
+  transform: translateX(5px);
+  }
+  30% {
+  transform: translateX(-5px);
+  }
+  50% {
+  transform: translateX(3px);
+  }
+  65% {
+  transform: translateX(-3px);
+  }
+  80% {
+  transform: translateX(2px);
+  }
+  100% {
+  transform: translateX(0);
+  }
 }
 
 .menu {
